# ika

./: auto_calibrate.py  forward_kinematics.py  live_plotter.py  plot_calibrated.py  serial_monitor.py  sync.py
autocal/: __init__.py  angle_tune.py  lstq.py  lstsq.py
grav/: .clang-format  CMakeLists.txt
grav/scripts/: plotter.py
grav/src/: KinematicIntegrator.hpp  KinematicIntegrator.ipp  main.cpp
ika/: __init__.py  ik.py  ika.py
iter/: grad_desc.py  gsa.py
